--- a/src/pages/impressum/index.css
+++ b/src/pages/impressum/index.css
@@ -43,6 +43,7 @@
             max-width: 100%;
             border-radius: 0;
             border-width: 0;
+            padding: 2.5rem 1.25rem;
         }
     }
 
